# backend-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml
services/api-gateway/: .env.example  README.md  alembic.ini  pyproject.toml
services/api-gateway/app/: lifecycle.py  main.py
services/api-gateway/app/api/: deps.py
services/api-gateway/app/api/v1/: browser_auth.py  health.py  proxy.py
services/api-gateway/app/clients/: auth_client.py  notification_client.py  user_client.py
services/api-gateway/app/core/: config.py  constants.py  cookies.py  logging.py  middleware.py  privacy.py  rate_limit.py  security.py
services/api-gateway/app/exceptions/: gateway.py
services/api-gateway/app/integrations/redis/: keys.py
services/api-gateway/app/observability/: audit.py  tracing.py
services/api-gateway/app/schemas/: gateway.py
services/api-gateway/app/services/: routing_service.py
services/api-gateway/app/static/: app.js  index.html  styles.css  two-factor-setup.css  two-factor-setup.html  two-factor-setup.js
services/api-gateway/tests/: conftest.py
services/api-gateway/tests/security/: test_header_sanitization.py  test_validation_logging.py
services/api-gateway/tests/unit/: test_auth_client.py  test_browser_auth.py  test_config_security.py  test_cookie_auth.py  test_no_store_headers.py  test_proxy_browser_auth.py  test_rate_limit.py  test_refresh_cookie_secure.py  test_routing_service.py  test_security.py
services/auth-service/: .env.example  README.md  alembic.ini  pyproject.toml
services/auth-service/app/: lifecycle.py  main.py
services/auth-service/app/api/: deps.py
services/auth-service/app/api/v1/: auth.py  health.py  sessions.py  tokens.py  two_factor.py
services/auth-service/app/core/: config.py  constants.py  cookies.py  idempotency.py  jwt.py  logging.py  middleware.py  privacy.py  rate_limit.py  security.py
services/auth-service/app/db/: registry.py  session.py
services/auth-service/app/exceptions/: auth.py  base.py  token.py  two_factor.py
services/auth-service/app/integrations/email/: __init__.py  provider.py
services/auth-service/app/integrations/redis/: client.py  keys.py
services/auth-service/app/integrations/totp/: generator.py  qr_code.py  verifier.py
services/auth-service/app/models/: __init__.py  audit_event.py  backup_code.py  password_reset_token.py  refresh_token.py  two_factor_secret.py  user.py  user_session.py
services/auth-service/app/observability/: audit.py  metrics.py  tracing.py
services/auth-service/app/repositories/: audit_repository.py  password_reset_repository.py  refresh_token_repository.py  session_repository.py  two_factor_repository.py  user_repository.py
services/auth-service/app/schemas/: auth.py  sessions.py  token.py  two_factor.py
services/auth-service/app/services/: audit_service.py  auth_service.py  brute_force_protection_service.py  jwt_service.py  password_reset_service.py  password_service.py  refresh_token_service.py  session_service.py  two_factor_service.py
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 20260411_0001_initial_auth_schema.py  20260413_0002_password_reset_tokens.py  20260416_0003_login_lock_state.py  20260421_0003_user_security_lock_flags.py
services/auth-service/tests/: conftest.py
services/auth-service/tests/integration/: test_two_factor_challenge_flow.py
services/auth-service/tests/security/: test_audit_sanitization.py  test_bruteforce_identifier_privacy.py  test_validation_logging.py
services/auth-service/tests/unit/: test_auth_service_login_lockout.py  test_config_file_secrets.py  test_config_security.py  test_deps_email_provider.py  test_email_provider.py  test_jwt_service.py  test_no_store_headers.py  test_password_reset_service.py  test_password_service.py  test_refresh_token_repository.py  test_refresh_token_service.py  test_security.py  test_session_service.py  test_sessions_api.py  test_two_factor_service.py
services/notification-service/: .env.example  README.md  pyproject.toml
services/notification-service/app/: main.py
services/notification-service/app/api/v1/: health.py
services/notification-service/app/core/: config.py  middleware.py  validation.py
services/notification-service/app/schemas/: common.py
services/notification-service/tests/: conftest.py  test_config_security.py  test_health.py
services/user-service/: .env.example  README.md  alembic.ini  pyproject.toml
services/user-service/app/: lifecycle.py  main.py
services/user-service/app/api/: deps.py
services/user-service/app/api/v1/: health.py  permissions.py  profiles.py  roles.py  users.py
services/user-service/app/core/: config.py  constants.py  middleware.py  privacy.py  rate_limit.py  security.py
services/user-service/app/db/: registry.py  session.py
services/user-service/app/exceptions/: auth.py
services/user-service/app/integrations/redis/: client.py  keys.py
services/user-service/app/models/: __init__.py  app_user.py  audit_event.py  permission.py  role.py  role_permission.py  user_profile.py  user_role.py
services/user-service/app/observability/: audit.py  metrics.py
services/user-service/app/repositories/: audit_repository.py  profile_repository.py  rbac_repository.py  user_repository.py
services/user-service/app/schemas/: common.py  permissions.py  profiles.py  roles.py  users.py
services/user-service/app/services/: audit_service.py  rbac_service.py  user_service.py
services/user-service/migrations/versions/: 20260411_0001_initial_user_schema.py
services/user-service/tests/: conftest.py
services/user-service/tests/security/: test_permission_guard.py  test_validation_logging.py
services/user-service/tests/unit/: test_access_token_service.py  test_config_security.py  test_rbac_service.py
shared/python/: README.md  pyproject.toml
shared/python/src/shared/config/: __init__.py  base.py  env.py  secrets.py
shared/python/tests/: test_config_secrets.py  test_http_request_ip.py  test_security.py
(+60 files in other folders)
