[project]
name = "backend-platform"
version = "0.1.0"
description = "Production-grade Python backend microservices platform"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "services/auth-service",
  "services/user-service",
  "services/api-gateway",
  "shared/python",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "services/auth-service/tests",
  "services/user-service/tests",
  "services/api-gateway/tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "e2e: end-to-end tests that require running service stack",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "S", "N", "ASYNC", "C4", "PIE"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
