[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "redis[hiredis]==5.2.1",
  "httpx==0.28.1",
  "pyjwt==2.10.1",
  "cryptography==44.0.0",
  "python-json-logger==3.2.1",
  "orjson==3.10.15",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==0.25.3",
  "pytest-cov==6.0.0",
  "ruff==0.9.3",
  "mypy==1.14.1",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
