[project]
name = "auth-service"
version = "0.1.0"
description = "Security-first authentication microservice"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.39",
  "asyncpg==0.30.0",
  "alembic==1.14.1",
  "pydantic-settings==2.7.1",
  "pydantic[email]==2.10.6",
  "redis[hiredis]==5.2.1",
  "pyjwt==2.10.1",
  "argon2-cffi==23.1.0",
  "pyotp==2.9.0",
  "qrcode[pil]==8.0",
  "cryptography==44.0.0",
  "python-json-logger==3.2.1",
  "orjson==3.10.15",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.3",
  "pytest-cov==6.0.0",
  "pytest-mock==3.14.0",
  "ruff==0.9.3",
  "mypy==1.14.1",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
