[project]
name = "notification-service"
version = "0.1.0"
description = "Notification microservice scaffold with production health probes"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "python-json-logger==3.2.1",
  "orjson==3.10.15",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.3",
  "pytest-cov==6.0.0",
  "ruff==0.15.10",
  "mypy==1.14.1",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
