[project]
name = "notification-service"
version = "0.1.0"
description = "Notification microservice scaffold with production health probes"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.135.3",
  "starlette==0.49.3",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "python-json-logger==3.2.1",
  "orjson==3.11.8",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==6.0.0",
  "ruff==0.9.3",
  "mypy==1.20.2",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
