[project]
name = "user-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.135.3",
  "starlette==0.49.3",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.39",
  "asyncpg==0.30.0",
  "alembic==1.14.1",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "pyjwt==2.12.1",
  "cryptography==47.0.0",
  "redis[hiredis]==5.2.1",
  "python-json-logger==3.2.1",
  "orjson==3.11.8",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==6.0.0",
  "ruff==0.9.3",
  "mypy==1.14.1",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
