[project]
name = "shared-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic==2.13.3",
  "pydantic-settings==2.7.1",
  "python-json-logger==3.2.1",
  "pyjwt==2.12.1",
  "argon2-cffi==23.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "ruff==0.9.3",
  "mypy==1.14.1",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shared*"]
